[package]
name = "histogram"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clocksource = { version = "0.7.0", path = "../clocksource" }
thiserror = "*"

[dev-dependencies]
criterion = "0.4.0"
pprof = { version = "0.3", features = ["flamegraph"] }

[[bench]]
name = "histogram"
harness = false
