[package]
name = "metriken-exposition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metriken = { version = "0.3.3", path = "../metriken" }
tokio = { version = "1.34.0", features = ["sync"] }
warp = "0.3.6"
